_sass/_sidebar.scss
/* ==========================================================================
   SIDEBAR
   ========================================================================== */

/*
   Default
   ========================================================================== */

.sidebar {
  -webkit-transform: translate3d(0, 0 , 0);
          transform: translate3d(0, 0 , 0);

  @include clearfix();
  margin-bottom: 1em;

  @include breakpoint($large) {
    @include span(2 of 12);
    opacity: 0.75;
    -webkit-transition: opacity 0.2s ease-in-out;
            transition: opacity 0.2s ease-in-out;

    &:hover {
      opacity: 1;
    }
  }

  @include breakpoint($x-large) {
    padding-right: 0;
  }

  h2, h3, h4, h5, h6 {
    margin-bottom: 0;
    font-family: $sans-serif-narrow;
  }

  p, li {
    font-family: $sans-serif;
    font-size: $type-size-6;
    line-height: 1.5;
  }

  img {
    width: 100%;
  }
}

.sidebar__right {
  margin-bottom: 1em;

  @include breakpoint($large) {
    position: relative;
    float: right;
    width: $right-sidebar-width-narrow;
    margin-left: span(0.5 of 12);
    z-index: 10;
  }

  @include breakpoint($x-large) {
    width: $right-sidebar-width;
  }
}

/*
   Author profile and links
   ========================================================================== */

.author__avatar {
  display: table-cell;
  vertical-align: top;
  width: 36px;
  height: 36px;

  @include breakpoint($large) {
    display: block;
    width: auto;
    height: auto;
  }

  img {
    max-width: 110px;
    border-radius: 50%;

    @include breakpoint($large) {
      padding: 5px;
      border: 1px solid $border-color;
    }
  }
}

.author__content {
  display: table-cell;
  vertical-align: top;
  padding-left: 15px;
  padding-right: 25px;
  line-height: 1;

  @include breakpoint($large) {
    display: block;
    width: 100%;
    padding-left: 0;
    padding-right: 0;
  }
}

.author__name {
  margin: 0;

  @include breakpoint($large) {
    margin-top: 10px;
    margin-bottom: 10px;
  }
}
.sidebar .author__name {
  font-family: $sans-serif;
  font-size: $type-size-5;
}

.author__bio {
  margin: 0;
	
  a {
		color: inherit;
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }

  @include breakpoint($large) {
    margin-top: 10px;
    margin-bottom: 20px;
  }
}

.author__urls-wrapper {
  position: relative;
  display: table-cell;
  vertical-align: middle;
  font-family: $sans-serif;
  z-index: 10;
  position: relative;
  cursor: pointer;

  li:last-child {
    a {
      margin-bottom: 0;
    }
  }

  @include breakpoint($large) {
    display: block;
  }

  button {
    margin-bottom: 0;

    @include breakpoint($large) {
      display: none;
    }
  }
}

.author__urls {
  display: none;
  list-style-type: none;

  @include breakpoint($large) {
    display: block;
    position: relative;
    margin: 0;
    padding: 0;
    border: 0;
    background: transparent;
    box-shadow: none;

    li {
      white-space: nowrap;
    }

    a {
      display: block;
      margin-bottom: 5px;
      padding-right: 5px;
      padding-top: 2px;
      padding-bottom: 2px;
      color: inherit;
      font-size: $type-size-5;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }

    .author__link {
      display: block;
      margin-bottom: 5px;
      padding-right: 5px;
      padding-top: 2px;
      padding-bottom: 2px;
      color: inherit;
      font-size: $type-size-5;
    }

    .author__link-note {
      display: block;
      margin-left: 1.5em;
      margin-top: -3px;
      margin-bottom: 5px;
      font-size: $type-size-6;
      opacity: 0.7;
    }
  }
}

/* Modal for follow links on narrow viewports - rendered at body level */
.follow-modal-overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: 9998;
  cursor: pointer;

  &.is--visible {
    display: block;
  }

  @include breakpoint($large) {
    display: none !important;
  }
}

.follow-modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: #fff;
  border-radius: $border-radius;
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
  max-width: 90vw;
  max-height: 80vh;
  overflow-y: auto;
  cursor: default;
}

.follow-modal__links {
  list-style: none;
  margin: 0;
  padding: 0.75em;
  min-width: 260px;

  li {
    margin-bottom: 0.125em;

    &:last-child {
      margin-bottom: 0;
    }
  }

  a {
    display: inline-flex;
    align-items: center;
    gap: 0.35em;
    padding: 0.15em 0.35em;
    color: inherit;
    font-size: $type-size-5;
    text-decoration: none;
    border-radius: $border-radius;
    white-space: nowrap;

    &:hover {
      background: $lighter-gray;
      text-decoration: none;
    }

    img, i {
      flex-shrink: 0;
    }

    span {
      white-space: nowrap;
    }
  }

  .author__link {
    display: inline-flex;
    align-items: center;
    gap: 0.35em;
    padding: 0.15em 0.35em;
    color: inherit;
    font-size: $type-size-5;
    border-radius: $border-radius;
    white-space: nowrap;

    i {
      flex-shrink: 0;
    }
  }

  .author__link-note {
    display: block;
    margin-left: calc(0.7em + 21px);
    margin-top: -0.15em;
    font-size: $type-size-6;
    opacity: 0.7;
  }
}

